# desafio-IN8

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: get_products.py  main.py  scraping.py
